@@ -25,7 +25,8 @@ MESSAGE("OPENGL NOT FOUND")
 SET(OPENGL_gl_LIBRARY opengl32)
 SET(OPENGL_glu_LIBRARY glu32)
 ENDIF (OPENGL_FOUND)
-ADD_DEFINITIONS(-DBT_USE_FREEGLUT)
+
+# ADD_DEFINITIONS(-DBT_USE_FREEGLUT)
 
 FIND_PACKAGE(GLU)
 
